--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.20.1",
     "cors": "^2.8.5",
     "react": "^18.3.1",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "socialmedia-client": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
