--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "react": "^18.3.1",
