--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "loglevel": "^1.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
