--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "antd": "^5.20.3",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.4.0",
+    "cloudinary-core": "^2.13.1",
+    "cloudinary-react": "^1.8.1",
     "cors": "^2.8.5",
     "loglevel": "^1.9.1",
     "react": "^18.3.1",
